test/sema/positive/struct05.impala
trait T {}
impl T for int {}

struct S[A:T] {
    x: A
}

fn f() -> S[int] {
   S[int] { x: 5 }
}
