test/sema/negative/struct05.impala
trait T {}

struct S[A:T] {
    x: A
}

fn f() -> S {
   S[int] { x: 5 }
}
